<resources>
    <string name="app_name">Wizard101 Damage Calculator</string>
    <string name="spell_damage">Spell Damage</string>
    <string name="wizard101_damage_calculator">Wizard101 Damage\nCalculator</string>
    <string name="_0">0</string>
    <string name="percent_boost">Gear Percent Damage Boost</string>
    <string name="flat_boost">Gear Flat Damage Boost</string>
    <string name="aura_boost">Aura Effect</string>
    <string name="charms_click_in_order_of_placed">Charms (Click in order of placed)</string>
    <string name="positive">Blades</string>
    <string name="_p20">+20%</string>
    <string name="_p25">+25%</string>
    <string name="_p30">+30%</string>
    <string name="_p35">+35%</string>
    <string name="_p40">+40%</string>
    <string name="_p45">+45%</string>
    <string name="_p50">+50%</string>
    <string name="_p70">+70%</string>
    <string name="_p75">+75%</string>
    <string name="_p80">+80%</string>
    <string name="other">+Other</string>
    <string name="negative">Weaknesses</string>
    <string name="_m10">-10%</string>
    <string name="_m15">-15%</string>
    <string name="_m20">-20%</string>
    <string name="_m25">-25%</string>
    <string name="_m30">-30%</string>
    <string name="_m35">-35%</string>
    <string name="_m40">-40%</string>
    <string name="_m45">-45</string>
    <string name="_m50">-50%</string>
    <string name="_m55">-55%</string>
    <string name="_m70">-70%</string>
    <string name="_m75">-75%</string>
    <string name="_m80">-80%</string>
    <string name="_m85">-85%</string>
    <string name="_m90">-90%</string>
    <string name="mOther">-Other</string>
    <string name="global_boost">Global Effect</string>
    <string name="targets_aura">Targets Aura Effect</string>
    <string name="targets_flat_resist">Targets Flat Damage Resist</string>
    <string name="targets_resist_percentage">Targets Percent Damage Resist</string>
    <string name="critical_boost">Critical Damage Multiplier</string>
    <string name="calculate">Calculate</string>
    <string name="total_damage_w_out_crit">Total Damage w/out Crit</string>
    <string name="total_damage_w_crit">Total Damage w/ Crit</string>
    <string name="wards">Wards</string>
    <string name="traps">Traps</string>
    <string name="shields">Shields</string>
    <string name="percentage_pierce">Percentage Pierce</string>
    <string name="clear_charms_and_wards">Clear</string>
    <string name="help"><u>Help?</u></string>
    <string name="tutorial">Help</string>
    <string name="spell_damage_tutorial">Use the damage value shown on the card. For cards with variable damage use the lowest number for minimum damage, highest number for maximum damage.</string>
    <string name="gear_s_damage_boost">Gear\'s damage boost</string>
    <string name="gear_boost_tutorial">For percent boost use the first number and for flat boost use seconds number. Remember that if your damage is over 100 or 150 your PvP and PvE values may differ due to the new damage system. Top number is percent bottom number is flat damage.</string>
    <string name="pierce">Pierce</string>
    <string name="pierce_tutorial">For this field use the value you see under armour pierce on your character stats.</string>
    <string name="remaining_number_fields">Remaining Number Fields</string>
    <string name="remaining_number_fields_tutorial">For the remaining fields aura boost, resistance, etc. If the target has a boost use a positive number and if the target has a resistance to you use a negative number.</string>
    <string name="charms_and_wards">Charms and Wards</string>
    <string name="charms_and_wards_tutorial">To add a charm or a ward click the button corresponding to the percent boost. For booth charms and wards make sure you click the buttons in the order of which they were cast.</string>
    <string name="critical_multiplier">Critical Multiplier</string>
    <string name="critical_multiplier_tutorial">Given the new critical system there is no way to know what the exact critical boost is without knowing the enemies block rating which is information we aren\'t given so as a general rule of thumb using a 1.5 critical bonus seems to deliver the most accurate results in the most different situations.</string>
    <string name="issues">Issues?</string>
    <string name="issues_contact">If you have any issues or suggestions feel free to contact me at wizdamagecalculator@gmail.com</string>
    <string name="thank_you">Thank You!</string>
    <string name="home">Back</string>
    <string name="div">\t</string>
    <string name="charms">Charms</string>
    <string name="double_div">\t\t</string>
    <string name="zero">0</string>
    <string name="storm_lord_content_description">Storm Lord picture for Spell Damage</string>
    <string name="content_description_damage_boost">Damage Boost Picture</string>
</resources>