<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="465dp"
        android:layout_height="match_parent"
        android:background="@color/teal_200">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:text="@string/wizard101_damage_calculator"
                android:textColor="@color/purple_700"
                android:textSize="25sp">

            </TextView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spell_damage">

                </TextView>

                <EditText
                    android:id="@+id/spellDamage"
                    android:layout_width="113dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="0"
                    android:hint="@string/_0"
                    android:inputType="number">

                </EditText>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/percent_boost">

                </TextView>

                <EditText
                    android:id="@+id/percentBoost"
                    android:layout_width="113dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="0"
                    android:hint="@string/_0"
                    android:inputType="number">

                </EditText>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flat_boost">

                </TextView>

                <EditText
                    android:id="@+id/flatBoost"
                    android:layout_width="113dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="0"
                    android:hint="@string/_0"
                    android:inputType="number">

                </EditText>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aura_boost">

                </TextView>

                <EditText
                    android:id="@+id/auraBoost"
                    android:layout_width="113dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="0"
                    android:hint="@string/_0"
                    android:inputType="number">

                </EditText>


            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/charms_click_in_order_of_placed">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/positive">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp">

                <Button
                    android:id="@+id/b20"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="73dp"
                    android:layout_height="68dp"
                    android:background="@drawable/circle_button"
                    android:text="@string/_p20">

                </Button>

                <Button
                    android:id="@+id/b25"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_p25">

                </Button>

                <Button
                    android:id="@+id/b30"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_p30">

                </Button>

                <Button
                    android:id="@+id/b35"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_p35">

                </Button>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp">

                <Button
                    android:id="@+id/b40"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_p40">

                </Button>

                <Button
                    android:id="@+id/b45"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_p45">

                </Button>

                <Button
                    android:id="@+id/b50"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_p50">

                </Button>

                <Button
                    android:id="@+id/bOther"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other">

                </Button>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/negative">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp">

                <Button
                    android:id="@+id/w10"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_m10">

                </Button>

                <Button
                    android:id="@+id/w15"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_m15">

                </Button>

                <Button
                    android:id="@+id/w20"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_m20">

                </Button>

                <Button
                    android:id="@+id/w25"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_m25">

                </Button>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp">

                <Button
                    android:id="@+id/w30"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_m30">

                </Button>

                <Button
                    android:id="@+id/w35"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_m35">

                </Button>

                <Button
                    android:id="@+id/w40"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_m40">

                </Button>

                <Button
                    android:id="@+id/w45"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_m45">

                </Button>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp">

                <Button
                    android:id="@+id/w50"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_m50">

                </Button>

                <Button
                    android:id="@+id/w55"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_m55">

                </Button>

                <Button
                    android:id="@+id/w90"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_m90">

                </Button>

                <Button
                    android:id="@+id/wOther"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mOther">

                </Button>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/global_boost">

                </TextView>

                <EditText
                    android:id="@+id/globalBoost"
                    android:layout_width="113dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="0"
                    android:hint="@string/_0"
                    android:inputType="number">

                </EditText>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/targets_aura">

                </TextView>

                <EditText
                    android:id="@+id/targetsAura"
                    android:layout_width="113dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="0"
                    android:hint="@string/_0"
                    android:inputType="number">

                </EditText>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wards">

                </TextView>

                <EditText
                    android:id="@+id/wards"
                    android:layout_width="113dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="0"
                    android:hint="@string/_0"
                    android:inputType="number">

                </EditText>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/targets_flat_resist">

                </TextView>

                <EditText
                    android:id="@+id/flatResist"
                    android:layout_width="113dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="0"
                    android:hint="@string/_0"
                    android:inputType="number">

                </EditText>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/targets_resist_percentage">

                </TextView>

                <EditText
                    android:id="@+id/percentResist"
                    android:layout_width="113dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="0"
                    android:hint="@string/_0"
                    android:inputType="number">

                </EditText>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/critical_boost">

                </TextView>

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <Button
                android:id="@+id/calculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/calculate">

            </Button>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/totalDamage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/total_damage_w_out_crit">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="     ">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/total_damage_w_crit">

                </TextView>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>